Mon Jan 19 15:32:21 2004  Tim Janik  <timj@gtk.org>

	* docs/site-development.texi: add french translation.

Sun Jan 18 01:27:13 2004  Christophe Merlet  <redfox@redfoxcenter.org>

	* configure.in: Added "fr" to ALL_LINGUAS.

Sat Jan 17 14:55:09 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bsttrackroll.[hc]: treat scopes as ordinary GtkWidgets.
	cleanup/reset parent_window for children in realize/unrealize, this
	fixes reparentation crashes. reenabled scopes.

	* beast-gtk/bstsnifferscope.[hc]: remove BseTrack special casing.

Sat Jan 17 03:05:49 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* docs/sfidl.texi: Started sfidl documentation.

	* docs/generated/Makefile.am: Build sfidl.markup and sfidl.html.

	* docs/Makefile.am: Include sfidl.texi.

Fri Jan 16 23:13:56 2004  Tim Janik  <timj@gtk.org>

	* docs/generated/Makefile.am: build plugin-devel.markup
	and plugin-devel.html.

	* docs/Makefile.am: install images in ${beastimagesdir}.

	* docs/module-voices.png:
	* docs/module-voices.dia: accompanying diagram for plugin-devel.texi.

	* docs/plugin-devel.texi: started plugin development documentation.

Thu Jan 15 23:48:01 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bsteventroll.c:
	* beast-gtk/bstpianoroll.c:
	* beast-gtk/bsttrackroll.c: fixed key-event return values.

Wed Jan 14 13:31:27 2004  Tim Janik  <timj@gtk.org>

	* docs/site-historic.texi: link updates.

Tue Jan 13 12:22:50 2004  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added "sq" to ALL_LINGUAS.

Sun Jan 11 06:17:51 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bsttrackroll.c: disable scopes, they seem to be broken
	across reparentation of a parent.

Sun Jan 11 04:51:53 2004  Tim Janik  <timj@gtk.org>

	* docs/site-navigation.xml: create BSE sound archive indices.

	* docs/site-news.texi: announce BSE Sound Archive.

Sat Jan 10 10:00:19 2004  Tim Janik  <timj@gtk.org>

	* autogen.sh: major cleanup. downgraded autoconf dependancy to 2.57.