@@ -1,4 +1,5 @@
 FIXMES:
+- make signal arguments STATIC_SCOPE (avoid fblock copies)
 - allow inverted synth-done (i.e. suitable for gate connecitons)
 - let the ADSR provide Gate-Out
 - reset-properties sets base-volume of BseAmplifier to 100% (should be 0)
